Integration m1 (#1)
* Adding first spoon and japicmp scan

* Extraction of ErrorLog to different class

* Change of breakage detection method
Added dependency to the Spoon model classpath
Removed option to identify broken lines by dependencyGroupId
Changed client path to the specified folder and not the one it contains

* Change of breakage detection method
Added dependency to the Spoon model classpath
Removed option to identify broken lines by dependencyGroupId
Changed client path to the specified folder and not the one it contains
Generated new explanations

* add statistics and broken uses info

* Explanations las generation

* Add SpoonCtInvocation class

* Add explanations

* Updating CLI instructions

* Add CtInvocation parser

* Refactoring unnecessary code

* Adding CtInvocation parser for methods

* Adding  parser for methods

* Adding  parser for imports methods

* add stats json

* Adding compatibility with maracas module

* Adding compatibility with maracas module

* Adding support for transitive pom files